Implementação de menu e rodapé

--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -11,13 +11,11 @@
       <ul class="social-network">
         <li>
           <a href="https://mail.google.com" target="_blank" class="iconEmail"
-            ><i class="fa fa-envelope" aria-hidden="true"></i
-          ></a>
+            ><img src="../../assets/img/gmail.png" alt=""></a>
         </li>
         <li>
-          <a href="https://mail.google.com" target="_blank" class="iconLinkedin"
-            ><i class="fa fa-linkedin-square" aria-hidden="true"></i
-          ></a>
+          <a href="https://www.linkedin.com/in/luiza-souza-06b1b0202/" target="_blank" class="iconLinkedin"
+            ><img src="../../assets/img/linkedin.png" alt=""></a>
         </li>
       </ul>
     </div>
