--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -40,11 +40,11 @@
                         </div>
                         <div class="d-flex justify-content-center">
                             <button type="submit" class="btn btn-success mr-4">Cadastrar</button>
-                            <button type="submit" class="btn btn-danger">Cancelar</button>
+                            <button type="submit" class="btn btn-danger" routerLink= '/login' >Cancelar</button>
                         </div>
                         <hr class="mt-5 mb-5">
                     <p class="text-center"> Já tem uma conta?
-                        <a href="http://" target="_blank" >Entre em sua conta</a>
+                        <a routerLink= '/login' >Entre em sua conta</a>
                     </p>
 
                     </div>
