--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                     </div>
                     <hr class="mt-5 mb-5">
                     <p class="text-center"> Não tem uma conta?
-                        <a href="http://" target="_blank" >Cadastre-se</a>
+                        <a routerLink= '/cadastro' >Cadastre-se</a>
                     </p>
                 </div>
             </div>
