--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -8,11 +8,11 @@
 
                         <div class="form-group">
                             <label for="nome">Nome</label>
-                            <input class="form-control" type="text" name="nome" id="nome" placeholder="Digite seu nome">
+                            <input  class="form-control" type="text" name="nome" id="nome" placeholder="Digite seu nome">
                         </div>
                         <div class="form-group">
                             <label for="usuario">Usuário</label>
-                            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
+                            <input  class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
                         </div>
                         <div class="form-group">
                             <label for="foto">Link da foto</label>
@@ -24,22 +24,22 @@
                         </div>
                         <div class="form-group">
                             <label for="senha">Senha</label>
-                            <input class="form-control" type="password" name="senha" id="senha" placeholder="Digite sua senha">
+                            <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Digite sua senha">
                         </div>
                         <div class="form-group">
                             <label for="confirmSenha">Confirmar senha</label>
-                            <input class="form-control" type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirmar senha">
+                            <input  class="form-control" type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirmar senha">
                         </div>
                         <div class="form-group">
                             <label for="tipo">Tipo de Usuário</label>
-                            <select class="form-control" name="tipo" id="tipo">
+                            <select class="form-control" name="tipo" id="tipo" (change)='tipoUsuario($event)'>
                                 <option>Selecione um tipo de usuário</option>
                                 <option value="normal">Normal</option>
                                 <option value="adm">Administrador</option>
                             </select>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-success mr-4">Cadastrar</button>
+                            <button type="submit" class="btn btn-success mr-4"(click)='cadastrar()'>Cadastrar</button>
                             <button type="submit" class="btn btn-danger" routerLink= '/login' >Cancelar</button>
                         </div>
                         <hr class="mt-5 mb-5">
