--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,89 @@
-<p>inicio works!</p>
+<div class="container-fluid">
+    <div class="row bg-dark align-items-center">
+       
+        <div class="col-md-6 d-flex justify-content-center">
+            <img src="https://i.imgur.com/FSP5s6H.png" alt="gif"  width="500px"
+            height="500px">
+        </div>
+        <div class="col-md-6">
+            <div class="row d-flex justify-content-center ">
+                <div class="col-md-9 text-white">
+                    <h1 class="fs-46">Seja Bem Vinde!</h1>
+                    <h5 class="fs-18">expresse aqui os seus pensamentos e opiniões!!</h5>
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-md-8">
+                            <button type="button" class="btn btn-light mb-2 mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+                            <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-center mt-3 mb-5">
+                    
+
+                </div>
+                
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="container mb-5 mt-5" id="postagens">
+    <nav>
+        <div class="nav nav-tabs d-flex justify-content-center font-weight-bold" id="nav-tab" role="tablist">
+          <a class="nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as Postagens</a>
+          <a class="nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
+          <a class="nav-link text-secondary font-weight-bold" id="nav-PostagemTema-tab" data-toggle="tab" href="#PostagemTema" role="tab" aria-controls="nav-PostagemTema" aria-selected="true">Postagens por Tema</a>
+          
+        </div>
+      </nav>
+      
+      <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+            Todas as Postagens
+        </div>
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
+            Minhas Postagens
+        </div>
+        <div class="tab-pane fade" id="PostagemTema" role="tabpanel" aria-labelledby="nav-PostagemTema-tab">
+            Postagens por Tema
+        </div>
+        
+      </div>
+</div>
+
+  <div class="modal fade" id="novaPostagem" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Vertically centered modal -->
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Nova Postagem</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="titulo">Título</label>
+            <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+          </div>
+          <div class="form-group">
+            <label for="texto">Texto</label>
+            <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="tema">Escolha um tema ou <a href="">cadastre um novo</a>:</label>
+            <select name="tema" id="tema" class="form-control">
+                <option value="">Temas</option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-success">Publicar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
