--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,14 +15,14 @@
     <ul class="navbar-nav mr-auto d-flex align-items-center">
       <li class="nav-item active">
         <img
-          src="https://i.imgur.com/6vznTfp.jpeg"
-          alt="foto do user"
+          src="{{foto}}"
+          alt="foto do usuario"
           width="50px"
           height="50px"
           class="img-fluid rounded-circle"/>
       </li>
       <li class="nav-item pl-3">
-        <p class="m-0 font-weight-bold text-white fs-16">Nome do usuário</p>
+        <p class="m-0 font-weight-bold text-white fs-16">Olá, {{nome}}</p>
       </li>
 
       <li class="nav-item pl-3">
@@ -33,7 +33,7 @@
     </ul>
     <ul class="navbar-nav ml-auto d-flex align-items-center">
       <li class="nav-item pl-3">
-      <a class="text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+      <a (click)='sair()' class="text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
     </li>
     </ul>
   </div>
