--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -72,7 +72,7 @@
             <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
           </div>
           <div class="form-group">
-            <label for="tema">Escolha um tema ou <a href="">cadastre um novo</a>:</label>
+            <label for="tema">Escolha um tema ou <a routerLink='/tema' data-dismiss="modal">cadastre um novo</a>:</label>
             <select name="tema" id="tema" class="form-control">
                 <option value="">Temas</option>
             </select>
