--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -32,18 +32,37 @@
     <nav>
         <div class="nav nav-tabs d-flex justify-content-center font-weight-bold" id="nav-tab" role="tablist">
           <a class="nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as Postagens</a>
-          <a class="nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
+          <a class="nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false" (click)="findByIdUsuario()">Minhas Postagens</a>
           <a class="nav-link text-secondary font-weight-bold" id="nav-PostagemTema-tab" data-toggle="tab" href="#PostagemTema" role="tab" aria-controls="nav-PostagemTema" aria-selected="true">Postagens por Tema</a>
           
         </div>
       </nav>
       
-      <div class="tab-content" id="nav-tabContent">
+      <div class="tab-content mt-5" id="nav-tabContent">
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
-            Todas as Postagens
+            <div class="card-columns">
+              <div class="card text-center" *ngFor='let item of listaPostagens'>
+                <div class="card-body">
+                  <h5 class="card-title m-0">{{item.titulo}}</h5>
+                  <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
+                  <p class="card-text mt-3">{{item.texto}}</p>
+                  <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+                  <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+                </div>
+              </div>
+            </div>
         </div>
         <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
-            Minhas Postagens
+          <div class="card-columns">
+            <div class="card text-center" *ngFor='let item of usuario.postagem'>
+              <div class="card-body">
+                <h5 class="card-title m-0">{{item.titulo}}</h5>
+                <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
+                <p class="card-text mt-3">{{item.texto}}</p>
+                <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="tab-pane fade" id="PostagemTema" role="tabpanel" aria-labelledby="nav-PostagemTema-tab">
             Postagens por Tema
@@ -69,7 +88,7 @@
           </div>
           <div class="form-group">
             <label for="texto">Texto</label>
-            <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+            <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"></textarea>
           </div>
           <div class="form-group">
             <label for="tema">Escolha um tema ou <a routerLink='/tema' data-dismiss="modal">cadastre um novo</a>:</label>
