--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -71,6 +71,7 @@
             <div class="card text-center" *ngFor='let item of tema.postagem'>
               <div class="card-body">
                 <h5 class="card-title m-0">{{item.titulo}}</h5>
+                <small class="text-muted mb-3">{{tema.descricao}}</small>
                 <p class="card-text mt-3">{{item.texto}}</p>
                 <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
                 <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
