--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -26,7 +26,7 @@
       </li>
 
       <li class="nav-item pl-3">
-        <a href="">
+        <a [routerLink]="['/user-edit',id]">
           <i class="fa fa-pencil font-weight-bold text-white fs-16 m-0" aria-hidden="true"></i>
         </a>       
       </li>
